*Empty MediaWiki Message*

--- a/დავით_მამამთავრიშვილი.mw
+++ b/დავით_მამამთავრიშვილი.mw
@@ -22,6 +22,8 @@
 
 შესრულებული აქვს 240 [[სამეცნიერო ნაშრომი]], მათგან 20 [[მონოგრაფია]].
 
-   დაჯილდოვებულია ოქტომბრის რევოლუციის, წითელი ვარსკვლავის და საპატიო ნიშნის ორდენებით და აგრეთვე სხვა მედლებით.
+დაჯილდოვებულია ოქტომბრის რევოლუციის, წითელი ვარსკვლავის და საპატიო ნიშნის ორდენებით და აგრეთვე სხვა მედლებით.
 
-  იყო ქირურგთა საერთაშორისო ასოციაციის ნამდვილი წევრი, საქართველოს ქირურგთა რესპუბლიკური საზოგადოების თავმჯდომარის მოადგილე. თბილისის ქირურგთა სამეცნიერო საზოგადოების თავმჯდომარე. რესპუბლიკის ჯანდაცვის სამინისტროს სამეცნიერო საბჭოს პრეზიდიუმის წევრი.
+იყო ქირურგთა საერთაშორისო ასოციაციის ნამდვილი წევრი, საქართველოს ქირურგთა რესპუბლიკური
+საზოგადოების თავმჯდომარის მოადგილე. თბილისის ქირურგთა სამეცნიერო საზოგადოების თავმჯდომარე.
+რესპუბლიკის ჯანდაცვის სამინისტროს სამეცნიერო საბჭოს პრეზიდიუმის წევრი.
