*Empty MediaWiki Message*

--- a/დავით_იოსელიანი.mw
+++ b/დავით_იოსელიანი.mw
@@ -1,4 +1,4 @@
-[[სურათი:ioseliani.jpg|thumb|დავით იოსელიანი]]
+[[სურათი:ioseliani1.jpg|thumb|დავით იოსელიანი]]
 '''დავით გიორგის ძე იოსელიანი''' (*[[17 აგვისტო]]/ [[30 აგვისტო]], [[1894]], სოფ. ქვემო ხვედურეთი, ახლანდელი [[ქარელის რაიონი]]  ―   †  [[25 თებერვალი]], [[1968]], [[თბილისი]]), ქართველი ქირურგი, მედიცინის მეცნიერებათა დოქტორი (1937), პროფესორი (1937), საქართველოს სსრ მეცნიერებათა დამსახურებული მოღვაწე (1942), სკკპ წევრი 1940-იდან. აკადემიის რექტორი – 1940–1949 წლებში. 
 
 ==ბიოგრაფია==
