--- a/ჯინჯერ_როჯერსი.mw
+++ b/ჯინჯერ_როჯერსი.mw
@@ -11,6 +11,10 @@
 ყმაწვილობაში ჯინჯერი სკოლაში მასწავლებლობაზე ოცნებობდა, თუმცა დედამისის ინტერესმა ჰოლივუდისა და თეატრისადმი ახალგაზრდა ჯინჯერს გადაწყვეტილება შეაცვლევინა. მაჯესტიკ თეატრის სცენის უკან დედის მომლოდინე ჯინჯერ მალე სიმღერასა და ცეკვას იწყებს სცენაზე შემსრულებლბის ყურებით.
 
 ==ვოდევილი==
+ხუთი წლის შემდეგ მისი სცენური კარიერა დაიბადა ერთ ღამეს, როცა მოხეტიალე ვოდევილის დასი ”ედი ფოი” (ბობ ჰოუპი ასრულებდა ჯუჯის როლს ”შვიდ პატარა ჯუჯაში”) ჩამოვიდა ფორტ-უორზში და სწრაფად დასჭირდა მოცეკვავის შეცვლა. ჯინჯერი სინჯებზე წავიდა, გაიმარჯვა ჩარლსტონის კონკურსი და შემდეგ ვოდევილის ტურზე გაემართა. ის და ლელა (დედამისი) ტურით ოთხი წელი მოგზაურობდნენ. ამ პერიოდში ლელა ჯონ როჯერს დასცილდა, თუმცა გვარი დაიტოვა.
+
+როცა ჯინჯერი 17 წლისა გახდა ის ჯეკ კალპეპერს, ცირკის ერთ-ერთი მოცეკვავე, გაჰყვა ცოლად. ქორწინება რამდენიმე თვეში დასრულდა და ჯინჯერი ისევ დედამისთან ერთად აგრძელებს ტურებს. როცა ტური [[ნიუ-იორკი|ნიუ-იორკში]] ჩავიდა, ის ქალაქში დარჩა. ჯერ რადიოში მღეროდა, შემდეგ [[ბროდვეი (ნიუ-იორკი)|ბროდვეის]] ერთ-ერთ თეატრში მიუზიკლში მოხვდა სახელწოდებით ”Top Speed”, რომელიც 1929 წლის შობადღეს გაიხსნა.
+
 ==კინოკარიერა==
 ==წლები ფრედ ასტერთან==
 ==ფილმოგრაფია==
