*Empty MediaWiki Message*

--- a/გიორგი_ხუნდაძე.mw
+++ b/გიორგი_ხუნდაძე.mw
@@ -1,4 +1,4 @@
-[[სურათი:khundadze.jpg|thumb|ხუნდაძე გიორგი]] [[მედიცინის მეცნიერებათა დოქტორი]], [[პროფესორი]].
+[[სურათი:khundadze1.jpg|thumb|ხუნდაძე გიორგი]] [[მედიცინის მეცნიერებათა დოქტორი]], [[პროფესორი]].
 
 აკადემიის რექტორი – [[1954]]–[[1979]] წლებში.
 
