*Empty MediaWiki Message*

--- a/ზაალ_კახიანი.mw
+++ b/ზაალ_კახიანი.mw
@@ -19,7 +19,7 @@
 
 შესრულებული აქვს 300 მეტი [[სამეცნიერო ნაშრომი]], 36 [[მონოგრაფია]], რამოდენიმე დამხმარე სახელმძღვანელო, არის 5 გამოგონების და 4 რაციონალიზატორული გამოგონების ავტორი.
 
-[[1980]] წელს მიენიჭა მეცნიერების დამსახურებული მოღვაწის წოდება და საქართველოს სახელმწიფო პრემიის ლაურეატობა, მოგვიანებით კი [[“[[ზაზა ფანასკერტელის]]” სახელობის პრემია]].
+[[1980]] წელს მიენიჭა მეცნიერების დამსახურებული მოღვაწის წოდება და საქართველოს სახელმწიფო პრემიის ლაურეატობა, მოგვიანებით კი [[ზაზა ფანასკერტელის სახელობის პრემია]].
 
 18 წლის მანძილზე ხელმძღვანელობდა თბილისის გრ. მუხაძის სახ. ქირურგთა საზოგადოებას. ასევე იყო საქართველოს სამედიცინო–სამეცნიერო საზოგადოებათა პრეზიდიუმის თავმჯდომარე.
 
