*Empty MediaWiki Message*

--- a/ზაალ_კახიანი.mw
+++ b/ზაალ_კახიანი.mw
@@ -1,7 +1,5 @@
 [[სურათი:kakhiani1.jpg|thumb]] 
-კახიანი ზაალ ნიკოლოზის ძე
-
-მედიცინის მეცნიერებათა დოქტორი, პროფესორი.
+კახიანი ზაალ ნიკოლოზის ძე [[მედიცინის მეცნიერებათა დოქტორი]], [[პროფესორი]].
 
 აკადემიის რექტორი – [[1989]]–[[1992]] წლებში.
 
