*Empty MediaWiki Message*

--- a/ალექსანდრე_წულუკიძე_(ექიმი).mw
+++ b/ალექსანდრე_წულუკიძე_(ექიმი).mw
@@ -1,10 +1,11 @@
 [[სურათი:Culukidze1.jpg|thumb|ალექსანდრე წულუკიძე]]
 
-წულუკიძე ალექსანდრე პეტრეს ძე მედიცინის მეცნიერებათა დოქტორი, პროფესორი.
+'''ალექსანდრე პეტრეს ძე წულუკიძე'''  (* [[22 იანვარი]], [[1888]], სოფ. კვახჭირი, ახლანდელი [[თერჯოლის რაიონი]] ―   †  [[21 იანვარი]], [[1967]], [[თბილისი]]) ქართველი ქირურგი-უროლოგი, მეცნიერული უროლოგიის ერთ-ერთი ფუძემდებელი საქართველოში. მედიცინის მეცნიერებათა დოქტორი (1925), პროფესორი (1930), სსრკ მედიცინის მეცნიერებათა აკადემიის წევრ-კორესპონდენტი (1946), საქარველოს მეცნიერებათა აკადემიის აკადემიკოსი (1955).
 
+==ბიოგრაფია==
 აკადემიის რექტორი – 1949–1953 წლებში.
 
-დაიბადა 1888 წლის 23 იანვარს ქ.ქუთაისში
+
 
 1913 წელს დაამთავრა ქ.ხარკოვის სახელმწიფო უნივერსიტეტის სამედიცინო ფაკულტეტი.
 
