*Empty MediaWiki Message*

--- a/განათლების_ერთიანი_საკრედიტო_კავშირი.mw
+++ b/განათლების_ერთიანი_საკრედიტო_კავშირი.mw
@@ -1,3 +1,4 @@
+{{სტილი}}
 '''საქართველოს განათლების ერთიანი საკრედიტო კავშირი''' 
 
 '''გესკ''', როგორც საქართველოს უნივერსიტეტთა და სკოლათაშორისი პროგრამა, დაარსდა [[2006]] წ. [[24 თებერვალი|24 თებერვალს]] და ვითარდება არასაბანკო-სადეპოზიტო, სასესხო პროგრამის სახით განათლების სექტორში. კავშირი ეფუძნება კოოპერაციის პრინციპებს და აერთიანებს განათლებაზე მოტივირებულ ახალგაზრდებს, ასევე განათლების სექტორში დასაქმებულ ფიზიკურ პირებს (მზარდი რიცხოვნობით).
