*Empty MediaWiki Message*

--- a/განათლების_ერთიანი_საკრედიტო_კავშირი.mw
+++ b/განათლების_ერთიანი_საკრედიტო_კავშირი.mw
@@ -1,7 +1,7 @@
 {{სტილი}}
 '''საქართველოს განათლების ერთიანი საკრედიტო კავშირი''' 
 
-'''გესკ''', როგორც საქართველოს უნივერსიტეტთა და სკოლათაშორისი პროგრამა, დაარსდა [[2006]] წ. [[24 თებერვალი|24 თებერვალს]] და ვითარდება არასაბანკო-სადეპოზიტო, სასესხო პროგრამის სახით განათლების სექტორში. კავშირი ეფუძნება კოოპერაციის პრინციპებს და აერთიანებს განათლებაზე მოტივირებულ ახალგაზრდებს, ასევე განათლების სექტორში დასაქმებულ ფიზიკურ პირებს (მზარდი რიცხოვნობით).
+'''გესკ''', როგორც საქართველოს უნივერსიტეტთა და სკოლათაშორისი პროგრამა, დაარსდა [[2006]] წ. 24 თებერვალს და ვითარდება არასაბანკო-სადეპოზიტო, სასესხო პროგრამის სახით განათლების სექტორში. კავშირი ეფუძნება კოოპერაციის პრინციპებს და აერთიანებს განათლებაზე მოტივირებულ ახალგაზრდებს, ასევე განათლების სექტორში დასაქმებულ ფიზიკურ პირებს (მზარდი რიცხოვნობით).
 
 მნიშვნელოვანი სასესხო-სარეზერვო ფონდები და მათი ზრდა განპირობებულია არა მარტო საწევრო და საპაიო შემონატანებით, არამედ მნიშვნელოვანი დახმარებებით პარტნიორი ორგანიზაციებიდან, საერთაშორისო ფონდებიდან, ისევე როგორც სხვადასხვა, საერთაშორისო განვითარების პროგრამებით.
 უახლოეს პერიოდში კავშირი მოიპოვებს წევრობას [[მსოფლიო საკრედიტო კავშირების საბჭოში]], ასევე იგეგმება თანამშრომლობის განვითარება საერთაშორისო სავალუტო ფონდის პროგრამებთან და საერთაშორისო საფინანსო კორპორაციასთან.
