--- a/საქართველოს_საზოგადოებრივ_საქმეთა_ინსტიტუტი.mw
+++ b/საქართველოს_საზოგადოებრივ_საქმეთა_ინსტიტუტი.mw
@@ -1,4 +1,4 @@
-'''საქართველოს საზოგადოებრივ საქმეთა ინსტიტუტი''' ('''გიპა''', ინგ. Georgian Institute of Public Affairs) დაარსდა [[თბილისი|თბილისში]] [[1994]] წელს საქართველოს მთავრობისა და [[აშშ-ის სახელმწიფო მმართველობის ეროვნული აკადემია|აშშ-ის სახელმწიფო მმართველობის ეროვნული აკადემიის]] ერთობლივი პროექტის საფუძველზე. სწორედ ამ სკოლის ბაზაზე დაფუძნდა შემდგომში ინსტიტუტი.
+'''საქართველოს საზოგადოებრივ საქმეთა ინსტიტუტი''' ('''გიპა''', ინგ. Georgian Institute of Public Affairs) დაარსდა [[თბილისი|თბილისში]] [[1994]] წელს საქართველოს მთავრობისა და [[აშშ-ის სახელმწიფო მმართველობის ეროვნული აკადემია|აშშ-ის სახელმწიფო მმართველობის ეროვნული აკადემიის]] ერთობლივი პროექტის საფუძველზე.
 
 პროექტის განხორციელებაში განსაკუთრებული როლი შეასრულა [[აშშ-ის საინფორმაციო სააგენტო|აშშ-ის საინფორმაციო სააგენტომ]] თბილისში, რომელმაც ბუდაპეშტის ადგილობრივი მმართველობისა და საჯარო სამსახურის ინსტიტუტთან და ვაშინგტონში ევრაზიის ფონდთან ერთად პირველ ეტაპზე დააფინანსა ინსტიტუტი. ინსტიტუტი თავდაპირველად განთავსებული იყო [[საქართველოს ტექნიკური უნივერსიტეტი|საქართველოს ტექნიკური უნივერსიტეტის]] შენობაში.
 
