*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_ბ.mw
+++ b/ცნობილი_ქართველები:_ბ.mw
@@ -242,9 +242,8 @@
 * [[ბოკერია, მარიამ]] - პედიატრი
 * [[ბოკუჩავა, მიხეილ]] - ბიოქომიკოსი
 * [[ბოლქვაძე, აბესა]] - გურიის აჯანყების ერთ-ერთი ხელმძღვანელი
-* [[ბოლქვაძე, გივი1]] - კარდიოლოგი
+* [[ბოლქვაძე, გივი]] - კარდიოლოგი
 * [[ბოლქვაძე, გიორგი]] - კარდიოლოგი
-* [[ბოლქვაძე, გივი]] - სტომატოლოგი 
 * [[ბოლქვაძე, ზაურ]] - პოეტი
 * [[ბოლქვაძე, თამარ]] - კინომსახიობი
 * [[ბოლქვაძე, თინათინ]] - მსახიობი
