*Empty MediaWiki Message*

--- a/ალექსანდრე_წულუკიძე_(ექიმი).mw
+++ b/ალექსანდრე_წულუკიძე_(ექიმი).mw
@@ -7,26 +7,29 @@
 
 
 
-1913 წელს დაამთავრა ქ.ხარკოვის სახელმწიფო უნივერსიტეტის სამედიცინო ფაკულტეტი.
+[[1913]] წელს დაამთავრა [[ხარკოვის სახელმწიფო უნივერსიტეტი|ქ.ხარკოვის სახელმწიფო უნივერსიტეტის]] სამედიცინო ფაკულტეტი.
 
-1916 წლიდან მუშაობს ქ.თბილისის ლაზარეთის ორდინატორად.
+[[1916]] წლიდან მუშაობს ქ.თბილისის ლაზარეთის ორდინატორად. ამავე წლიდან მუშაობდა [[მუხაძე, გ. მუხაძესთან]].
 
-1922-1924 წლებში მივლინებულ იქნა საზღვარგარეთ პარიზის, ბერლინის და ვენის ცნობილ უროლოგიურ კლინიკებში.
+[[1922]]-[[1924]] წლებში მივლინებულ იქნა საზღვარგარეთ [[პარიზი|პარიზის]], [[ბერლინი|ბერლინის]] და [[ვენა|ვენის]] ცნობილ უროლოგიურ კლინიკებში.
 
-1925 წელს დაიცვა სადოქტორო დისერტაცია.
+[[1925]] წელს დაიცვა სადოქტორო დისერტაცია.
 
-1927 წელს ჩაუდგა სათავეში ახლად გახსნილ ქ.თბილისის # 1 კლინიკური საავადმყოფოს უროლოგიურ განყოფილებას. ამავე წელს მიენიჭა პრივატ-დოცენტის წოდება.
+[[1927]] წელს ჩაუდგა სათავეში ახლად გახსნილ ქ.თბილისის # 1 კლინიკური საავადმყოფოს უროლოგიურ განყოფილებას. ამავე წელს მიენიჭა პრივატ-დოცენტის წოდება.
 
-1930 წელს მიენიჭა პროფესორის წოდება.
+[[1930]] წელს მიენიჭა პროფესორის წოდება.
 
-    სხვადასხვა წლებში ხელმძღვანელობდა თბილისის სახელმწიფო სამედიცინო ინსტიტუტის კათედრებს. ექიმთა დახელოვნების თბილისის სახელმწიფო ინსტიტუტის ქირურგიის და შემდეგ უროლოგიის კათედრას. ასევე იყო საქართველოს სსრ მეცნიერებათა აკადემიის სამეცნიერო განყოფილების თავმჯდომარე.
+1930-1959 წლებში ხელმძღვანელობდა თბილისის სახელმწიფო სამედიცინო ინსტიტუტის კათედრებს. ექიმთა დახელოვნების თბილისის სახელმწიფო ინსტიტუტის ქირურგიის და შემდეგ უროლოგიის კათედრას. ასევე იყო საქართველოს სსრ მეცნიერებათა აკადემიის სამეცნიერო განყოფილების თავმჯდომარე.
 
-1949 წლიდან იქნა არჩეული ექიმთა დახელოვნების თბილისის სახელმწიფო ინსტიტუტის დირექტორად.
+[[1949]]-[[1953]] წლიდან იქნა არჩეული თბილისის ექიმთა დახელოვნების თბილისის სახელმწიფო ინსტიტუტის დირექტორად.
 
-1958 წელს მისი ინიციატივით დაარსდა თბილისის ჯანდაცვის განყოფილების უროლოგიური დისპანსერი.
+[[1953]]-[[1965]] წელს მისი ინიციატივით დაარსებული უროლოგიის სამეცნიერო-კვლევითი ინსტიტუტის დიტექტორი (1967-იდან ინსტიტუტს მისი სახელი მიენიჭა). დიდი სამამულო ომის (1941-1945) წლებში მუშაობდა საქართველოს სსრ ჯანდაცვის სამინოსტროს ევაკოჰოსპიტლების მთავარ ქირურგად. იტო უროლოგთა საკავშირო საზოგადოების საპატიო წევრი და სხვა. შეისწავლიდა შარდკენჭოვან დაავადებას, უროლოგიის, კურორტოლოგიის, ბაქტერიოლოგიის, მედიცინის ისტორიის საკითხებს. შეიმუშავა რამდენიმე ოპერაციის (ორიგინალური) ტექნიკა. ქართულ ენაზე შეადგინა უროლოგიის პირველი სახელმძღვანელოები. 
 
-1959 წელს კი საქართველოს მეცნიერებათა აკადემიის უროლოგიის ინსტიტუტი, რომელსაც იგი ხელმძღვანელობდა.
+შესრულებული აქვს 150-მდე სამეცნიერო ნაშრომი და 20-ზე მეტი მონოგრაფია.
 
-    შესრულებული აქვს 150-მდე სამეცნიერო ნაშრომი და 20-ზე მეტი მონოგრაფია.
+[[1941]] წელს მიენიჭა მეცნიერების დამსახურებული მოღვაწის საპატიო წოდება, დაჯილდოვებულია: [[ლენინის ორდენი|ლენინის]], [[შრომის წითელი დროშის ორდენი|შრომის წითელი დროშის]], [[წითელი ვარსკვლავის ორდენი|წითელი ვარსკვლავის]] ორ-ორი ორდენით, ასევე რამდენიმე სხვა მედლით.
 
-1941 წელს მიენიჭა მეცნიერების დამსახურებული მოღვაწის საპატიო წოდება, დაჯილდოვებულია: ლენინის, შრომის წითელი დროშის, წითელი ვარსკვლავის ორ-ორი ორდენით, ასევე რამდენიმე სხვა მედლით.
+[[კატეგორია:ქართველები]]
+[[კატეგორია:ქართველი მეცნიერები]]
+[[კატეგორია:დაბადებული  1888]]
+[[კატეგორია:გარდაცვლილი 1967]]
