*Empty MediaWiki Message*

--- a/ალექსანდრე_წულუკიძე_(ექიმი).mw
+++ b/ალექსანდრე_წულუკიძე_(ექიმი).mw
@@ -9,7 +9,7 @@
 
 [[1913]] წელს დაამთავრა [[ხარკოვის სახელმწიფო უნივერსიტეტი|ქ.ხარკოვის სახელმწიფო უნივერსიტეტის]] სამედიცინო ფაკულტეტი.
 
-[[1916]] წლიდან მუშაობს ქ.თბილისის ლაზარეთის ორდინატორად. ამავე წლიდან მუშაობდა [[მუხაძე, გ. მუხაძესთან]].
+[[1916]] წლიდან მუშაობს ქ.თბილისის ლაზარეთის ორდინატორად. ამავე წლიდან მუშაობდა [[მუხაძე, გრიგოლ|გ. მუხაძესთან]].
 
 [[1922]]-[[1924]] წლებში მივლინებულ იქნა საზღვარგარეთ [[პარიზი|პარიზის]], [[ბერლინი|ბერლინის]] და [[ვენა|ვენის]] ცნობილ უროლოგიურ კლინიკებში.
 
