--- a/ჯინჯერ_როჯერსი.mw
+++ b/ჯინჯერ_როჯერსი.mw
@@ -40,6 +40,94 @@
 ჯინჯერი ზამთარს რანჩო მირაჟზე, კალიფორნია, ატარებდა, ზაფხულს კი მედფორდში, ორეგონი. გარდაიცვალა 1995 წლის 25 აპრილს, დიაბეტის გართულების გამო, 83 წლის ასაკში რანჩო მირაჟში. დაკრძალულია ოუკვუდის მემორიალური პარკის სასაფლაოზე ჩატსუორზში, კალიფორნია.
 
 ==ფილმოგრაფია==
+*''Campus Sweethearts'' (1929) (მოკლემეტრაჟიანი)
+*''A Day of a Man of Affairs'' (1929) (მოკლემეტრ.)
+*''A Night in a Dormitory'' (1930) (მოკლემეტრ.)
+*''მანჰეტენელი ახალგაზრდა მამაკაცი'' (Young Man of Manhattan) (1930)
+*''The Sap from Syracuse'' (1930)
+*''Queen High''  (1930)
+*''Office Blues'' (1930) (მოკლემეტრ.)
+*''მიჰყევი ლიდერს'' (Follow the Leader) (1930)
+*''Honor Among Lovers'' (1931)
+*''The Tip-Off'' (1931)
+*''Suicide Fleet'' (1931)
+*''Carnival Boat'' (1932)
+*''The Tenderfoot'' (1932)
+*''Hollywood on Parade'' (1932) (მოკლემეტრ.)
+*''The Thirteenth Guest'' (1932)
+*''Screen Snapshots''  (1932) (მოკლემეტრ.)
+*''Hat Check Girl'' (1932)
+*''You Said a Mouthful'' (1932)
+*''[[42nd Street]]'' (1933)
+*''Broadway Bad'' (1933)
+*''Hollywood on Parade No. 9'' (1933) (მოკლემეტრ.)
+*''ოქროს მაძიებლები'' (Gold Diggers of 1933)  (1933)
+*''Professional Sweetheart'' (1933)
+*''სიყვარულზე სანაძლეოს ნუ დადებ'' (Don't Bet on Love) (1933)
+*''A Shriek in the Night'' (1933)
+*''Rafter Romance'' (1933)
+*''Chance at Heaven'' (1933)
+*''Sitting Pretty'' (1933)
+*''Flying Down to Rio'' (1933) (*)
+*''Twenty Million Sweethearts'' (1934)
+*''Upperworld'' (1934)
+*''Finishing School'' (1934)
+*''Change of Heart'' (1934)
+*''The Gay Divorcee'' (1934) (*)
+*''Hollywood Newsreel'' (1934) (მოკლემეტრ.)
+*''Romance in Manhattan'' (1935)
+*''Roberta'' (1935) (*)
+*''Star of Midnight''  (1935)
+*''Top Hat'' (1935) (*)
+*''In Person'' (1935)
+*''Follow the Fleet'' (1936) (*)
+*''Swing Time'' (1936) (*)
+*''ვიცეკვოთ?'' (Shall We Dance) (1937) (*)
+*''Stage Door'' (1937)
+*''Vivacious Lady'' (1938)
+*''Having Wonderful Time'' (1938)
+*''უზრუნველი'' (Carefree) (1938) (*)
+*''The Story of Vernon and Irene Castle'' (1939) (*)
+*''გადათხოვარი დედა'' (Bachelor Mother) (1939)
+*''5th Ave Girl'' (1939)
+*''Primrose Path'' (1940)
+*''Lucky Partners'' (1940)
+*''Kitty Foyle'' (1940)
+*''Tom Dick and Harry'' (1941)
+*''Roxie Hart'' (1942)
+*''მანჰეტენის ისტორიები'' (Tales of Manhattan) (1942)
+*''The Major and the Minor'' (1942)
+*''ერთხელ, თაფლობისთვეს'' (Once Upon a Honeymoon) (1942)
+*''Show Business at War'' (1943) (მოკლემეტრ.)
+*''Tender Comrade'' (1943)
+*''Lady in the Dark'' (1944)
+*''Battle Stations'' (1944) (მოკლემეტრ.)
+*''I'll Be Seeing You'' (1945)
+*''Week-End at the Waldorf'' (1945)
+*''Heartbeat'' (1946)
+*''Magnificent Doll'' (1946)
+*''It Had to Be You'' (1947)
+*''The Barkleys of Broadway'' (1949) (*)
+*''Screen Snapshots: The Great Showman'' (1950) (მოკლემეტრ.)
+*''Perfect Strangers'' (1950)
+*''Storm Warning'' (1951)
+*''The Groom Wore Spurs'' (1951)
+*''We're Not Married!'' (1952)
+*''Dreamboat'' (1952)
+*''Monkey Business'' (1952)
+*''Forever Female'' (1953)
+*''Screen Snapshots: Hollywood's Great Entertainers'' (1953) (მოკლემეტრ.)
+*''Black Widow'' (1954)
+*''Beautiful Stranger'' (1954)
+*''Tight Spot'' (1955)
+*''The First Traveling Saleslady'' (1956)
+*''Oh, Men! Oh, Women!''  (1957)
+*''The Confession'' (1964)
+*''Harlow'' (1965)
+
+
+(*) - ფრედ ასტერთან.
+
 ==რესურსები ინტერნეტში==
 * [http://www.gingerrogers.com/home.html ჯინჯერ როჯერსის ოფიციალური ვებ-გვერდი]
 
