--- a/ჯინჯერ_როჯერსი.mw
+++ b/ჯინჯერ_როჯერსი.mw
@@ -131,8 +131,7 @@
 ==რესურსები ინტერნეტში==
 * [http://www.gingerrogers.com/home.html ჯინჯერ როჯერსის ოფიციალური ვებ-გვერდი]
 
-{{ესკიზი}}
-
+[[კატეგორია:ამერიკელები]]
 [[კატეგორია:ამერიკელი მსახიობები]]
 
 [[da:Ginger Rogers]]
