/* წლები ფრედ ასტერთან */

--- a/ჯინჯერ_როჯერსი.mw
+++ b/ჯინჯერ_როჯერსი.mw
@@ -25,19 +25,18 @@
 მომდევნო რამდენიმე უღიმღამო ფილმის შემდეგ ის შემთხვევით ისევ ხვდება ფრედ ასტერს. 1939 წელს ის ”დასაქორწინებელ დედა”-ში დევიდ ნივენთან პირისპირ ასრულებს როლს.
 
 ==წლები ფრედ ასტერთან==
-ჯინჯერ როჯერსის ყველაზე ცნობილი წლები მისი ფრედ ასტერთან პარტნიორობა იყო. ერთად მათ შექმნეს ისეთი ფილმები, როგორიცაა Top Hat და Swing Time. ეს ფილმები, როგორც ასეთი საკმაოდ სუსტი იყო, თუმცა ფრედისა და ჯინჯერის ბრწყინვალე საცეკვაო შესრულება განუმეორებელ შთაბეჭდილებას ტოვებს. მათ პარტნიორობაზე კეტრინ ჰეპბერნს უთქვამს: ”ის (ჯინჯერი) მას სექსს აძლევს, ფრედი კი მას კლასს”. მიუხედავად მათი სცენური შეყვარებულობისა, სცენის გარეთ ისინი მეგობრები არ ყოფილან და მათი ბოლო ერთობლივი ფილმი 1939 წელს გამოვიდა. მიუხედავად ამისა, ”ფრედი და ჯინჯერი” თითქმის სინონიმი გახდა ნებისმიერი წარმატებული საცეკვაო პარტრნიორობისა.
+[[სურათი:ginger_astaire_tophat_poster.jpg|thumb|left|ტოპ ჰეტ (1935) -- ჯინჯერისა და ფრედის მეოთხე ერთობლივი სურათი, რომელმაც მათ უზარმაზარი წარმატება მოუტანა.]]
+ჯინჯერ როჯერსის ყველაზე ცნობილი წლები მისი ფრედ ასტერთან პარტნიორობა იყო. ერთად მათ შექმნეს ისეთი ფილმები, როგორიცაა Top Hat და Swing Time. ეს ფილმები, ფაბულის თვალსაზრისით საკმაოდ სუსტი იყო, თუმცა ფრედისა და ჯინჯერის ბრწყინვალე საცეკვაო შესრულება განუმეორებელ შთაბეჭდილებას ტოვებს. მათ პარტნიორობაზე [[ჰეპბერნი, ქეტრინ|ქეტრინ ჰეპბერნს]] უთქვამს: ”ის (ჯინჯერი) მას სექსს აძლევს, ფრედი კი მას კლასს”. თუმცა, მიუხედავად მათი სცენური შეყვარებულობის იმიჯისა, სცენის გარეთ ისინი მეგობრები არ ყოფილან. მიუხედავად ამისა, ”ფრედი და ჯინჯერი” თითქმის სინონიმი გახდა ნებისმიერი წარმატებული საცეკვაო პარტრნიორობისა. მათი ბოლო ერთობლივი ფილმი 1939 წელს გამოვიდა.
 
-1941 წელს ჯინჯერ როჯერსმა ამერიკის კინოაკადემიის ოსკარი მიიღო საუკეთესო ქალი შემსრულებლისთვის როლისთვის 1940 წლის ფილმში ”კიტი ფოილი”. 1940 წელს მან 1000 აკრის რანჩო შეიძინა შეიდი კოუვს, ორეგონსა და ეგლ-პოინტშ შორის მდ. როუგზე, მედფორდიდან ჩრდილოეთით. ამ რანჩოში (მეტსახელად ”4რ” - Rogers' Rogue River Ranch) ის დედამისთან თითქმის 50 წელი ცხოვრობდა. როჯერს უყვარდა მდინარეში თევზაობა ყოველ ზაფხულს. თუმცა 1990 წელს მან რანჩო გაყიდა და მედფორდში გადავიდა.
+1941 წელს ჯინჯერ როჯერსმა [[ამერიკის კინოაკადემიის ოსკარი]] მიიღო საუკეთესო ქალი შემსრულებლისთვის როლისთვის 1940 წლის ფილმში ”კიტი ფოილი”. 1940 წელს მან 1000 აკრის რანჩო შეიძინა შეიდი-კოუვს, ორეგონსა და ეგლ-პოინტშ შორის მდ. როუგზე, მედფორდიდან ჩრდილოეთით. ამ რანჩოში (მეტსახელად ”4რ” - Rogers' Rogue River Ranch) ის დედამისთან თითქმის 50 წელი ცხოვრობდა. როჯერსს უყვარდა მდინარეში თევზაობა ყოველ ზაფხულს. თუმცა 1990 წელს მან რანჩო გაყიდა და მედფორდში გადავიდა.
 
-ჯინჯერი პოლიტუკურა მემარჯვენი რესპუბლიკელი იყო და მთელი ცხოვრება დედასთან, ლელა როჯერსი (1891-1977), გაატარა, რომელიც თავის მხრივ ქრისტიანულ მეცნიერებას მისდევდა. ჯინჯერი დედამისთან ერთად გააფრთებული ანტი-კომუნისტები იყნენე და ამ მხრივ საეჭვო პირებს ასმენდნენ ხოლმე ”თემთა პალატის არა-ამერიკული საქმიანობის გამოძიების კომისიას” (HUAC).
+ჯინჯერი პოლიტუკურად მემარჯვენი რესპუბლიკელი იყო და მთელი ცხოვრება დედასთან, ლელა როჯერსი (1891-1977), გაატარა, რომელიც თავის მხრივ ქრისტიანულ მეცნიერებას მისდევდა. ჯინჯერი დედამისთან ერთად გააფრთებული ანტი-კომუნისტები იყვნენ და ამ მხრივ საეჭვო პირებს ასმენდნენ ხოლმე ”თემთა პალატის არა-ამერიკული საქმიანობის გამოძიების კომისიასთან” (HUAC).
 
-1929 წლის პირველი ქორწინების შემდეგ, ცეკვის პარტნიორ ჯეკ პეპერთან, 1931 წელს ის განქორწინდა, ხოლო 1934 წელს მეორედ იქორწინა, ამჯერად მსახიობ ლიუ ეირსთან (1908-1996); თუმცა ისინი მალევე დაშორდნენ ერთმანეთს, 1941 წელს კი ოფიციალურად განქორწინდნენ. 1943 წელს ის მესამედ თხოვდება ჯეკ ბრიგსზე, რომელიც საზღვაო ძალების ოფიცერი იყო; ისინი 1949 წელს განქორწინდნენ.
+1929 წლის პირველი ქორწინების შემდეგ, ცეკვის პარტნიორ ჯეკ პეპერთან, 1931 წელს ის განქორწინდა, ხოლო 1934 წელს მეორედ იქორწინა, ამჯერად მსახიობ ლიუ ეირსთან (1908-1996); თუმცა ისინი მალევე დაშორდნენ ერთმანეთს, 1941 წელს კი ოფიციალურად განქორწინდნენ. 1943 წელს ის მესამედ თხოვდება ჯეკ ბრიგსზე, რომელიც საზღვაო ძალების ოფიცერი იყო; ისინი 1949 წელს განქორწინდნენ. 1953 წელს ჯინჯერი მეოთხედ თხოვდება იურისტ ჟაკ ბერჟერაკზე (16 წლით მასზე უმცროსი, რომელიც მოგვიანებით მსახიობი, შემდეგ კი კოსმეტიკური კომპანიის მმართველი გახდა); განქორწინდნენ 1957 წელს. 1961 წელს ჯინჯერი მეხუთედ ქორწინდება დირექტორსა და პროდიუსერ უილამ მარშალზე, თუმცა რამდენიმე კვირაში შორდება, ხოლო 1969 წელს კი ოფიციალურად იღებს განქორწინების საბუთს.
 
-1953 წელს ჯინჯერი მეოთხედ თხოვდება იურისტ ჟაკ ბერჟერაკზე (16 წლით მასზე უმცროსი, რომელიც მოგვიანებით მსახიობი, შემდეგ კი კოსმეტიკური კომპანიის მმართველი გახდა); განქორწინდნენ 1957 წელს. 1961 წელს ჯინჯერი მეხუთედ ქორწინდება დირექტორსა და პროდიუსერ უილამ მარშალზე, თუმცა რამდენიმე კვირაში შორდება, ხოლო 1969 წელს კი ოფიციალურად იღებს განქორწინების საბუთს.
+ჯინჯერი მეგობრობდა ლიუსილ ბოლთან მრავალი წლის განავლობაში, ბოლის გარდაცვალებამდე 1989 წელს, 77 წლის ასაკში. ლიუსი ჯინჯერის პოლიტიკურ შეხედულებებს არ იზიარებდა, თუმცა უდაოდ მისი კომპანია სიამოვნებდა, ისევე როგორც [[დევისი, ბეთ|ბეთ დევისს]], დემოკრატს, რომელიც ჯინჯერს ”მორალისტს” უწოდებდა.
 
-ჯინჯერი მეგობრობდა ლიუსილ ბოლთან მრავალი წლის განავლობაში, ბოლის გარდაცვალებამდე 1989 წელს, 77 წლის ასაკში. ლიუსი ჯინჯერის პოლიტიკურ შეხედულებებს არ იზიარებდა, თუმცა უდაოდ მისი კომპანია სიამოვნებდა, ისევე როგორც ბეთ დევისს, დემოკრატს, რომელიც ჯინჯერს მორალისტს უწოდებდა.
-
-ჯინჯერი ზამთარს რანჩო მირაჟზე, კალიფორნია, ატარებდა, ზაფხულს კი მედფორდში, ორეგონი. გარდაიცვალა 1995 წლის 25 აპრილს, დიაბეტის გართულების გამო, 83 წლის ასაკში რანჩო მირაჟში. დაკრძალულია ოუკვუდის მემორიალური პარკის სასაფლაოზე ჩატსუორზში, კალიფორნია.
+ჯინჯერი ზამთარს რანჩო მირაჟზე, [[კალიფორნია]], ატარებდა, ზაფხულს კი მედფორდში, [[ორეგონი]]. გარდაიცვალა 1995 წლის 25 აპრილს, დიაბეტის გართულების გამო, 83 წლის ასაკში რანჩო მირაჟში. დაკრძალულია ოუკვუდის მემორიალური პარკის სასაფლაოზე ჩატსუორზში, კალიფორნია.
 
 ==ფილმოგრაფია==
 *''Campus Sweethearts'' (1929) (მოკლემეტრაჟიანი)
