--- a/ჯინჯერ_როჯერსი.mw
+++ b/ჯინჯერ_როჯერსი.mw
@@ -39,6 +39,7 @@
 ჯინჯერი ზამთარს რანჩო მირაჟზე, [[კალიფორნია]], ატარებდა, ზაფხულს კი მედფორდში, [[ორეგონი]]. გარდაიცვალა 1995 წლის 25 აპრილს, დიაბეტის გართულების გამო, 83 წლის ასაკში რანჩო მირაჟში. დაკრძალულია ოუკვუდის მემორიალური პარკის სასაფლაოზე ჩატსუორზში, კალიფორნია.
 
 ==ფილმოგრაფია==
+[[სურათი:ginger_portrait_autographed.jpg|thumb|200px|ჯინჯერის პორტრეტი ავტოგრაფით, 1943.]]
 *''Campus Sweethearts'' (1929) (მოკლემეტრაჟიანი)
 *''A Day of a Man of Affairs'' (1929) (მოკლემეტრ.)
 *''A Night in a Dormitory'' (1930) (მოკლემეტრ.)
