*Empty MediaWiki Message*

--- a/თამარ_მეფე.mw
+++ b/თამარ_მეფე.mw
@@ -23,7 +23,7 @@
 თამარის მეფობის დასასრულისათვის საქართველოს ყმადნაფიცი ქვეყნები იყვნენ აღმოსავლეთით [[შირვანი]] და [[რანი]]; ჩრდილოეთით [[ქაშაგეთი]], [[ოსეთი]], [[დურძუკეთი]], [[დიდოეთი]], [[ღუნძეთი]], [[ლეკეთი]] და [[დარუბანდი]]. მოხარკე ქვეყნები სამხრეთით - ხლათის სასულთო, ერზინკის სასულთნო, კარნუ-ქალაქის (არზრუმის) საამირო, ნახჭევნის სააამირო. XII საუკუნის უკანასკნელ მეოთხედსა და XIII საუკუნის დასაწყისში ფეოდალურმა საქართველომ თავისი პოლიტიკური სიძლიერის, ეკონომიური და კულტურული აღმავლობის უმაღლეს საფეხურს მიაღწია.
 
 ==კულტურული აღმშენებლობა==
-თამარის მეფობაში საქართველოში ფართო მასშტაბის სამშენებლო სამუშაოები ჩატარდა (აშენდა გზები, ხიდები, ციხესიმაგრეები, სასახლეები, ეკლესია-მონასტრები). მის დროსაა აგებული ბერთუბნის, [[ბეთანიის მონასტერი|ბეთანიის მონასტრები]], [[ვარძიის მონასტერი|ვარძიის]] კლდეში ნაკვეთი სამონასტრო კომპლექსი და სხვები. თამარი მფარველობდა და მატერიალურ დახმარებას უწევდა ქართული კულტურის ცენტრებს ქვეყნის შიგნით და საზღვარგარეთ, მფარველობას უწევდა მეცნიერებს, პოეტებს, ხელოვანთ. თამარის პიროვნებას განსაკუთრებული ადგილი უკავია ფეოდალიზმის ხანის საქართველოს ისტორიაში. ქართულ ეკლესიამ თამარი წმინდად შერაცხა. 
+თამარის მეფობაში საქართველოში ფართო მასშტაბის სამშენებლო სამუშაოები ჩატარდა (აშენდა გზები, ხიდები, ციხესიმაგრეები, სასახლეები, ეკლესია-მონასტრები). მის დროსაა აგებული ბერთუბნის, [[ბეთანია|ბეთანიის მონასტრები]], [[ვარძია (მონასტერი)|ვარძიის]] კლდეში ნაკვეთი სამონასტრო კომპლექსი და სხვები. თამარი მფარველობდა და მატერიალურ დახმარებას უწევდა ქართული კულტურის ცენტრებს ქვეყნის შიგნით და საზღვარგარეთ, მფარველობას უწევდა მეცნიერებს, პოეტებს, ხელოვანთ. თამარის პიროვნებას განსაკუთრებული ადგილი უკავია ფეოდალიზმის ხანის საქართველოს ისტორიაში. ქართულ ეკლესიამ თამარი წმინდად შერაცხა. 
 
 ისტორიკოსები და პოეტები ხოტბას ასხამდნენ მას, ფუნჯის ოსტატები ხატავდნენ თამარს. თამარი იქცა ქართველი ხალხის სათაყვანებელ პიროვნებად. ძველი საქართველოს მოღვაწეებიდან ყველაზე მეტი პოემა, ლექსი და ლეგენდა თამარისადმია მიძღვნილი (მათ შორის ჩახრუხაძისა და შავთელის ოდები, [[შოთა რუსთაველი|შოთა რუსთაველის]] "ვეფხისტყაოსანი").
 
