*Empty MediaWiki Message*

--- a/სამცხე-ჯავახეთის_მხარე.mw
+++ b/სამცხე-ჯავახეთის_მხარე.mw
@@ -62,7 +62,7 @@
 
 მხარის ტერიტორიაზე მდებარეობს ბუნების, არქიტექტურისა და კულტურის მრავალი ძეგლი, მათ შორის უმნიშვნელოვანესია:
 
-*ვარძიის სამონასტრო კომპლექსი
+*[[ვარძია (მონასტერი)|ვარძიის]] სამონასტრო კომპლექსი
 *ციხე–ქალაქი [[თმოგვი]]
 *[[ხერთვისის ციხე]]
 *[[ზარზმის მონასტერი]]
