--- a/ჯინჯერ_როჯერსი.mw
+++ b/ჯინჯერ_როჯერსი.mw
@@ -17,7 +17,7 @@
 როცა ჯინჯერი 17 წლისა გახდა ის ჯეკ კალპეპერს, ცირკის ერთ-ერთი მოცეკვავე, გაჰყვა ცოლად. ქორწინება რამდენიმე თვეში დასრულდა და ჯინჯერი ისევ დედამისთან ერთად აგრძელებს ტურებს. როცა ტური [[ნიუ-იორკი|ნიუ-იორკში]] ჩავიდა, ის ქალაქში დარჩა. ჯერ რადიოში მღეროდა, შემდეგ [[ბროდვეი (ნიუ-იორკი)|ბროდვეის]] ერთ-ერთ თეატრში მიუზიკლში მოხვდა სახელწოდებით ”Top Speed”, რომელიც 1929 წლის შობადღეს გაიხსნა.
 
 ==კინოკარიერა==
-ჯინჯერის პირველი კინო-როლი იყო მოკლემეტრაჟიანი ფილმების ტროლოგია 1929 წელს — Night in the Dormitory, A Day of a Man of Affairs, და Campus Sweethearts.
+ჯინჯერის პირველი კინო-როლი იყო მოკლემეტრაჟიანი ფილმების ტრილოგია 1929 წელს — Night in the Dormitory, A Day of a Man of Affairs, და Campus Sweethearts.
 
 მიუზიკლი ”ტოპ სპიდ”-ის გახსნიდან ორ კვირაში ის აიყვანეს ჯორჯ გერშვინისა და ირა გერშვინის დადგმაში ”ქალი-გიჟი” (Girl Crazy) როლის შესასრულებლად. ქორეოგრაფიაში მოცეკვავეთათვის დასახმარებლად აყვანილ იქნა [[ასტერი, ფრედ|ფრედ ასტერი]] და მცირე ხნით ფრედი და ჯინჯერი ერთმანეთს ხვდებოდნენ კიდეც. ”ქალი-გიჟში” გამოჩენამ ჯინჯერი ერთ ღამეში ვარსკვლავად აქცია 19 წლის ასაკში. 1930 წელს მას პარამაუნტ პიქჩერზმა შვიდ-წლიანი კონტრაქტი გაუფორმა.
 
