/* მსოფლიო მემკვირეობის სიაში */

--- a/კრემლი.mw
+++ b/კრემლი.mw
@@ -3,10 +3,11 @@
 
 ==რუსული ქალაქები კრემლით==
 [[სურათი:Smolensk kremlin.jpg|thumb|250px|სმოლენსკის კრემლის გალავანი 1912 წ.]]
-===მსოფლიო მემკვირეობის სიაში===
+===მსოფლიო მემკვიდრეობის ძეგლები===
 *[[მოსკოვის კრემლი|მოსკოვი]]
 *[[ნოვგოროდის კრემლი|ნოვგოროდი]]
 *[[ყაზანის კრემლი|ყაზანი]]
+
 ===შემონახული===
 *[[ნიჟნი-ნოვგოროდის კრემლი|ნიჟნი-ნოვგოროდი]]
 *[[ფსკოვის კრემლი|ფსკოვი]]
