--- a/საფრანგეთი.mw
+++ b/საფრანგეთი.mw
@@ -101,7 +101,7 @@
 
 ==მემკვიდრეობა== 
 
-მონ-სენ მიშელი და მისი ყურე, [[ვერსალის სასახლე]] და პარკი, [[ფონტენბლოს სასახლე]] და პარკი, [[ამიენის საკათედრო ტაძარი|ამიენის[[ და [[შარტრის საკათედრო ტაძარი|შარტრის საკათედრო ტაძრები]], [[პარიზის ღვთისმშობლის ტაძარი]], [[ეიფელის კოშკი]], სენის სანაპიროები, ავინიონის და ლიონის ისტორიული ცენტრები; ფორტიფიცირებული ქალაქი [[კარკასონი]]; ლუარის ველები; ფრანგული ეპოსი - [[სიმღერა როლანდზე]] (XI ს.).
+მონ-სენ მიშელი და მისი ყურე, [[ვერსალის სასახლე]] და პარკი, [[ფონტენბლოს სასახლე]] და პარკი, [[ამიენის საკათედრო ტაძარი|ამიენის]] და [[შარტრის საკათედრო ტაძარი|შარტრის საკათედრო ტაძრები]], [[პარიზის ღვთისმშობლის ტაძარი]], [[ეიფელის კოშკი]], სენის სანაპიროები, ავინიონის და ლიონის ისტორიული ცენტრები; ფორტიფიცირებული ქალაქი [[კარკასონი]]; ლუარის ველები; ფრანგული ეპოსი - [[სიმღერა როლანდზე]] (XI ს.).
 
 ==ისტორია== 
 
