*Empty MediaWiki Message*

--- a/შარტრის_საკათედრო_ტაძარი.mw
+++ b/შარტრის_საკათედრო_ტაძარი.mw
@@ -6,7 +6,7 @@
 
 [[რომანული სტილი|რომანული სტილის]] ნაგებობის ფუნდამენტზე ახალი შენობის აღმართვა [[1145]] წელს დაიწყო, თუმცა [[1194]] წლის ხანძარს მხოლოდ ტაძრის დასავლეთის ფასადი გადაურჩა და ეს ნაწილი ადრეულ გოთურ სტილშია. კათედრალის ძირითადი კარკასი აღდგენილ იქნა 1194-1220 წლებში, რაც საკმაოდ მცირე დროა შუასაუკუნეების ტაძრების მშენებლობისთვის.
 
-შარტრის კათედრალის სილამაზე მრავალი შემოქმედის აღმაფრენის წყარო ყოფილა, არქიტექტურის ისტორიკოსები ხოტბას ასხამდნენ მის დახვეწილ წახნაგებსა და ცადატყორცნილ ჰაეროვან ქიმებს. ძველ ისტორიკოსთა ამგვარ შეფასებას დღესაც სავსებით იზიარებენ, ვინაიდან შარტრის ტაძარი ჭეშმარიტად შეუდარებელია ყველა ფრანგულ გოთურ კათედრალთა შორის. შორიდან იქმნება ილუზია, რომ ის ხორბლის ველებზე ჰაერშია გამოკიდული და მხოლოდ მასთან მიახლოებისას ამჩნევს მნახველი გარშემო არსებულ ქალაქს, რომელიც ტაძრის გორაკის ფერდობებზეა შეფენილი. მისი ორი კონტრასტული ქიმი - ერთი 105 მ. მარტივი პირამიდის ფორმის, 1140 წელსაა აგებული, მეორე კი - 113 მეტრი სიმაღლის, ადრეული მე-16 საუკუნის ფლამბოიანტური ორნამენტებით დამშვენებული გუმბათია დაშენებული შედარებით ადრინდელ კოშკზე -- აჭიმულია რუხ მომწვანო სახურავზე; მათ გარშემო კომპლექსური არკ-ბუტანტებია (ე.წ. მფრინავი საყრდენები) შემოვლებული.
+შარტრის კათედრალის სილამაზე მრავალი შემოქმედის აღმაფრენის წყარო ყოფილა, არქიტექტურის ისტორიკოსები ხოტბას ასხამდნენ მის დახვეწილ წახნაგებსა და ცადატყორცნილ ჰაეროვან ქიმებს. ძველ ისტორიკოსთა ამგვარ შეფასებას დღესაც სავსებით იზიარებენ, ვინაიდან შარტრის ტაძარი ჭეშმარიტად შეუდარებელია ყველა ფრანგულ გოთურ კათედრალთა შორის. შორიდან იქმნება ილუზია, რომ ის ხორბლის ველებზე ჰაერშია გამოკიდული და მხოლოდ მასთან მიახლოებისას ამჩნევს მნახველი ტაძრის გორაკის ფერდობებზე გარშემო შეფენილ ქალაქს. მისი ორი კონტრასტული ქიმი - ერთი 105 მ. მარტივი პირამიდის ფორმის, 1140 წელსაა აგებული, მეორე კი - 113 მეტრი სიმაღლის, ადრეული მე-16 საუკუნის ფლამბოიანტური ორნამენტებით დამშვენებული გუმბათია დაშენებული შედარებით ადრინდელ კოშკზე -- აჭიმულია რუხ მომწვანო სახურავზე; მათ გარშემო კომპლექსური არკ-ბუტანტებია (ე.წ. მფრინავი საყრდენები) შემოვლებული.
 
 ლეგენდის თანახმად [[876]] წლიდან ტაძარში ინახება ტუნიკა (Sancta Camisia), რომელიც წმინდა მარიამ ღვთისმშობელს ეკუთვნოდა. ეს წმინდა რელიქვია კათედრალისთვის უბოძებია [[შარლემანი|შარლემანს]], რომელმაც ის საჩუქრად [[იერუსალიმი|იერუსალიმზე]] [[ჯვაროსნული ლაშქრობები|ჯვაროსნული ლაშქრობის]] დროს მიიღო. სინამდვილეში საჩუქარი [[შარლ II]]-ისგან იყო; სპეციალისტთა შეფასებით ქსოვილი სირიული წარმოშობისაა და დამზადებულია ჩვ.წ. პირველ საუკუნეში. საუკუნეების განმავლობაში შარტრი წმ. მარიამის პილგრიმთა მნიშვნელოვანი ცენტრი იყო და დღესაც მორწმუნენი მთელი მსოფლიოდან ამ წმინდა რელიქვიის პატივსაცემად მოდიან.
 
@@ -20,7 +20,7 @@
 
 [[საფრანგეთის რევოლუცია|საფრანგეთის რევოლუციის]] დროს შარტრის კათედრალი დანგრევას და ძარცვას გადაურჩა, ხოლო მას შემდეგ ჩატარებულ უამრავ რესტავრაციას მისი თავდაპირველი ბრიწყინვალება არ შეულახავს. ის ყოველთვის იგივე - გოთური ხელოვნების ტრიუმფი - რჩებოდა. კათედრალი [[1979]] წელს [[იუნესკო|იუნესკოს]] [[მსოფლიო კულტურული მემკვიდრეობა|მსოფლიო კულტურული მემკვიდრეობის]] სიაშია შეტანილი.
 
-შუა საუკუნეებში კათედრალი ასევე ფუნქციონირებდა, როგორც მნიშვნელოვანი საგანმანათლებლო კერა. [[შარლემანი|შარლემანის]] სურვილით განათლება ფრანგი ხალხისთვის ხელმისაწვდომი უნდა გამხდარიყო და ვინაიდან ახალი სკოლების აშენება გაცილებით ძვირი იქნებოდა, არსებული ინფრასტრუქტურის გამოყენება უფრო ადვილი იყო. მისი ბრძანებით კათედრალებსა და მონასტრებში სკოლების არსებობა და რელიგიური სწავლება აუცილებელი კრიტერიუმი გახდა მთელ საფრანგეთში. კათედრალურმა სკოლებმა მალე სამონასტრო სკოლებს წაართველ განათლების წამყვანი როლი და უკვე მე-11 საუკუნეში კათედრალი თავად გახდა სკოლის სიმბოლო/სინონიმი. ყველა კათედრალს საკუთარი სპეციალიზაცია ჰქონდა და შარტრის დახელოვნებად [[ლოგიკა|ლოგიკის]] სწავლება ითვლებოდა. შარტრის ახალი ლოგიკა მრავალთა მიერ პარიზზე უფრო პროგრესულადაც კი ითვლებოდა.
+შუა საუკუნეებში კათედრალი ასევე ფუნქციონირებდა, როგორც მნიშვნელოვანი საგანმანათლებლო კერა. [[შარლემანი|შარლემანის]] სურვილით განათლება ფრანგი ხალხისთვის ხელმისაწვდომი უნდა გამხდარიყო და ვინაიდან ახალი სკოლების აშენება გაცილებით ძვირი იქნებოდა, არსებული ინფრასტრუქტურის გამოყენება უფრო ადვილი იყო. მისი ბრძანებით კათედრალებსა და მონასტრებში სკოლების არსებობა და რელიგიური სწავლება აუცილებელი კრიტერიუმი გახდა მთელ საფრანგეთში. კათედრალურმა სკოლებმა მალე სამონასტრო სკოლებს წაართვა განათლების წამყვანი როლი და უკვე მე-11 საუკუნეში კათედრალი თავად გახდა სკოლის სიმბოლო/სინონიმი. ყველა კათედრალს საკუთარი სპეციალიზაცია ჰქონდა და შარტრის დახელოვნებად [[ლოგიკა|ლოგიკის]] სწავლება ითვლებოდა. შარტრის ახალი ლოგიკა მრავალთა მიერ პარიზისაზე უფრო პროგრესულადაც კი ითვლებოდა.
 
 ==რესურსები ინტერნეტში==
 *[http://kunsthistorie.com/galleri/index.php?album=Frankrike%2FChartres&sortby=name&order=asc შარტრის არქიტექტურული დეტალები - ფოტოები]
@@ -29,7 +29,7 @@
 
 [[კატეგორია:ქრისტიანული ტაძრები]]
 [[კატეგორია:მსოფლიო კულტურული მემკვიდრეობის ძეგლები]]
-[[კატეგორია:არქიტექტურა]]
+[[კატეგორია:საფრანგეთის არქიტექტურა]]
 
 [[de:Kathedrale von Chartres]]
 [[en:Cathedral of Chartres]]
