*Empty MediaWiki Message*

--- a/სევილიის_საკათედრო_ტაძარი.mw
+++ b/სევილიის_საკათედრო_ტაძარი.mw
@@ -1,6 +1,6 @@
 [[Image:Sevilla2005July 043.jpg|thumb|300px|კათედრალი ფორთოხლის ბაღიდან]]
 [[Image:Sevilla kathedrale innenansicht.jpg|thumb|300px|კათედრალის ინტერიერი]]
-'''სევილიის საკათედრო ტაძარი''' (ესპ. Catedral de Sevila, ყოფილი Catedral de Santa María de la Sede) საკუთარ ისტორიას 1402 წლიდან იწყებს, თუმცა მისი მშენებლობა მე-16 საუკუნემდე გრძელდებოდა. მდებარეობს [[სევილია|სევილიაში]], [[ესპანეთი]].
+'''სევილიის საკათედრო ტაძარი''' (ესპ. Catedral de Sevila, ყოფილი Catedral de Santa María de la Sede) საკუთარ ისტორიას 1402 წლიდან იწყებს, თუმცა მისი მშენებლობა მე-16 საუკუნემდე გრძელდებოდა. მდებარეობს [[სევილია|სევილიაში]], [[ანდალუზია]], [[ესპანეთი]].
 
 ეს უდიდესი რომაულ-კათოლიკური კათედრალია (წმ. პეტრეს ბაზილიკა რომში კათედრალთა რიცხვს არ ეკუთვნის) და ასევე უდიდესი შუასაუკუნეების გოთური რელიგიური შენობაა, ფართობითაც და მოცულობით. მისი ზომებია 76x115 მ. და იგი ყოფილი [[ალმოჰადის მეჩეთი|ალმოჰადის მეჩეთის]] ადგილას აშენდა. მისი ცენტრალური თაღი 42 მეტრის სიმაღლემდე ადის და გვერდითი სამრეკლოებიც კი იმხელაა, რომ თითოეული ცალკე ეკლესიას დაიტევა. ტაძრის მთავარი საკურთხეველი ქრისტიანულ სამყაროში უდიდესად ითვლება.
 
