*Empty MediaWiki Message*

--- a/პარიზის_ღვთისმშობლის_ტაძარი.mw
+++ b/პარიზის_ღვთისმშობლის_ტაძარი.mw
@@ -1,4 +1,5 @@
-[[სურათი:Notre Dame de Paris, front view, summer 2004..JPG|thumb|250px|პარიზის ნოტრ-დამი, დასავლეთის ფასადი.]]
+[[სურათი:Notre Dame de Paris, front view, summer 2004.JPG|thumb|250px|პარიზის ნოტრ-დამი, დასავლეთის ფასადი.]]
+[[სურათი:Notre Dame de Paris rose window view from inside.jpg|thumb|250px|სამხრეთის ფანჯრის ხედი შიგნიდან.]]
 '''პარიზის ღვთისმშობლის ტაძარი''' (ფრანგ. Notre Dame de Paris), ასევე ცნობილი როგორც '''ნოტრ-დამი''', გოთური საკათედრო ტაძარია [[პარიზი|პარიზის]] ილ-დე-ლა-სიტეს აღმოსავლეთ ნაწილში, მთავარი შესასვლელით დასავლეთიდან. ის დღემდე მოქმედი რომაულ-კათოლიკური კათდერალია (პარიზის ეპარქიის). პარიზის ნოტრ-დამი ფრანგული გოთური არქიტექტურის ერთ-ერთ ყველაზე დახვეწილ ნიმუშად ითვლება.
 
 პარიზის ნოტრ-დამი ერთ-ერთი პირველი გოთური კათედრალი იყო და შენდებოდა მთელი გოთური პერიოდის განმავლობაში. მისი სკულპტურები და მოჭიქული მინა [[ნატურალიზმი|ნატურალიზმის]] ძლიერ გავლენაზე მიუთითებს, აძლევა რა მათ უფრო სეკულარულ ხასიათს, რაც ადრეულ რომანულ ფორმებში ნაკლებად შეინიშნებოდა.
