--- a/6_აპრილი.mw
+++ b/6_აპრილი.mw
@@ -2,11 +2,10 @@
 
 
 ==დღის მოვლენები==
-
-*[[1561]] : ბრძოლა ციხედიდთან. ქართველები დამარცხდნენ ყიზილბაშებთან
-*[[1896]] : თანამედროვეობის პირველი [[ოლიმპიური თამაშები|ოლიმპიური თამაშების]] გახსნა 
+*[[648]] : ყველაზე ადრეული აღრიცხული [[მზის დაბნელება]] ძველი ბერძნების მიერ.
+*[[1561]] : ბრძოლა ციხედიდთან. ქართველები დამარცხდნენ ყიზილბაშებთან.
+*[[1896]] : თანამედროვეობის პირველი [[ოლიმპიური თამაშები|ოლიმპიური თამაშების]] გახსნა.
 *[[1917]] : [[აშშ]]-მ ომი გამოუცხადა [[გერმანია|გერმანიას]]
-
 
 ==ამ დღეს დაბადებულნი==
 *[[1903]] : [[დავით V, კათოლიკოსი]] - საქართველოს კათოლიკოს-პატრიარქი 
