*Empty MediaWiki Message*

--- a/თემურლენგი.mw
+++ b/თემურლენგი.mw
@@ -7,6 +7,9 @@
 
 თემურლენგის ლაშქრობები გამოირჩეოდა არაჩვეულებრივი სისასტიკით. [[1386]]-[[1403]] თემურლენგი რვაჯერ [[თემურლენგის ლაშქრობანი საქართველოში | შემოესია საქართველოს]] და უდიდესი ზიანი მიაყენა ქართულ სახელმწიფოსა და ქართველ ხალხის შემდგომ განვითარებას.
 
+[[კატეგორია:მხედართმთავრები]]
+[[კატეგორია:დაბადებული  1336]]
+[[კატეგორია:გარდაცვლილი 1405]]
 
 
 [[bg:Тимур]]
